cabal-version:       2.2
-- Thanks to https://github.com/IvanMalison/dotfiles/tree/master/dotfiles/config/xmonad
-- for how to recomile xmonad with taffybar using stack.

name:                norrs-xmonad
version:             0.1.0.0
synopsis:            Roy Sindre Norangshol's xmonad configuration.
homepage:            https://github.com/norrs/dotfiles/tree/master/dot.xmonad
license:             GPL-3.0-only
author:              Roy Sindre Norangshol
maintainer:          roy.sindre@norangshol.no
category:            System
build-type:          Simple

executable norrs-xmonad
  main-is:             xmonad.hs
  build-depends:       aeson>=0.11.2.1
                     , X11>=1.8
                     , base >=4.7
                     , bytestring>=0.10.8.1
                     , containers>=0.5.7.1
                     , directory>=1.2.6.2
                     , filepath>=1.4.1.0
                     , hostname>=1.0
                     , multimap>=1.2.1
                     , process>=1.4.3.0
                     , safe
                     , split
                     , xdg-desktop-entry
                     , transformers>=0.5.2.0
                     , tuple >= 0.3.0.2
                     , utf8-string
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  hs-source-dirs:      .
                       src
  other-modules: PagerHints
  default-language:    Haskell2010
