name:                norrs-taffybar
version:             0.1.0.0
homepage:            https://github.com/norrs/dotfiles/tree/master/dotfiles/config/taffybar
license:             BSD3
author:              Roy Sindre Norangshol
maintainer:          roy.sindre@norangshol.no
copyright:           Roy Sindre Norangshol
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable norrs-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:      -threaded -g -rtsopts
  ghc-prof-options: -fprof-auto
  build-depends:       base
                     , X11>=1.8
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hostname
                     , hslogger
                     , process
                     , split
                     , taffybar
                     , transformers
                     , xdg-basedir
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/norrs/dotfiles
